[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://MyMan.png" type="Texture" id=2]
[ext_resource path="res://addons/dialogue_tree/scripts/dialogue.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogue_tree/assets/Icon.png" type="Texture" id=4]
[ext_resource path="res://FirstTreeResource.tres" type="Resource" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 155.0

[node name="MyMan" type="RigidBody2D"]
pause_mode = 2
position = Vector2( 890.435, 474.333 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Polygon2D" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.164729, 0.164729 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 15, -214.9, 39.4, -205.5, 53.6, -211.5, 56.5, -211.5, 59, -210.3, 61.2, -212.5, 104, -212.5, 104, -211.3, 119, -209.3, 119, -207.7, 145, -195.8, 145, -193.9, 145.7, -190.5, 147.9, -190.5, 162.9, -172.6, 168, -174.3, 168, -171, 170.1, -167.5, 175, -167.5, 175, -164.8, 176.4, -160.5, 180.4, -160.5, 182.4, -154.5, 186.4, -154.5, 188.4, -148.5, 195, -144.6, 195, -141, 214, -109, 214, -105.9, 220, -89.9, 220, -87.2, 218.5, -81.9, 221.3, -77.6, 220.2, -75.5, 219.3, -75.5, 218.7, -74.4, 222.2, -67.5, 218.8, -67.5, 217, -65.7, 217, -65, 219.2, -60.5, 215.8, -60.5, 213.2, -57.9, 215.3, -54.6, 214.2, -52.5, 212.9, -52.5, 205, -43.8, 205, -42.3, 206.4, -41, 205.3, -38.5, 203.5, -38.5, 200, -36.4, 200, -34.3, 201.4, -33, 200.3, -30.5, 198.5, -30.5, 194, -28.2, 194, -24.7, 190.8, -21.5, 187.7, -21.5, 183, -18.4, 183, -16.5, 214.8, -16.5, 273, 41.7, 273, 180.5, 271, 180.5, 264, 189.5, 253.2, 189.5, 244, 180.3, 244, 51.3, 206.2, 12.5, 166.7, 12.5, 163, 11.3, 163, 14.9, 157, 16.9, 157, 20.9, 151, 22.9, 151, 26.3, 147.8, 29.5, 144, 29.5, 144, 30.2, 140, 35.5, 136.1, 35.5, 133.1, 40.5, 129.8, 40.5, 126, 45.5, 122.2, 45.5, 119.9, 43.2, 118.2, 46.5, 98, 46.5, 98, 44.6, 90, 47.5, 90, 206.2, 83, 215.5, 80, 215.5, 25, 216.5, 25, 214.5, 18, 209.5, 18, 206.5, 17, 43.5, -1, 43.5, -1, 41.2, -2.10001, 39.5, -9, 42.7, -9, 39.9, -23.4, 34.5, -25, 34.5, -54, 35.4, -54, 185.8, -55.6, 190.5, -57.2, 190.5, -66.2, 199.5, -98, 199.5, -98, 197.4, -106, 190.4, -106, 27.3, -112.8, 20.5, -115.2, 20.5, -116.5, 21.9, -119, 20.8, -119, 19, -121.1, 15.5, -122.2, 15.5, -123.5, 16.9, -126, 15.8, -126, 14, -128.3, 9.5, -131.8, 9.5, -135, 6.29999, -135, 3.5, -139.4, 3.5, -141.4, -2.5, -144.8, -2.5, -148, -5.7, -148, -10.5, -149.2, -10.5, -156.2, -3.5, -182.2, -3.5, -254, 67.3, -254, 166.3, -263.1, 176.5, -273.7, 176.5, -282, 169.4, -282, 53.5, -279.8, 53.5, -195.8, -31.5, -192, -31.5, -168.7, -32.4, -169.3, -33.5, -170.6, -33.5, -183, -41.4, -183, -46.1, -189, -48.1, -189, -51.5, -192.8, -51.5, -196, -54.7, -196, -57.7, -201, -61.5, -201, -64.8, -200.8, -65.5, -206, -69.5, -206, -72, -205, -74, -205, -80.7, -208, -83.7, -208, -87.3, -205.5, -89.8, -208, -91.4, -208, -104.5, -205.8, -104.5, -205.3, -105, -208, -107.7, -208, -110.6, -205, -112.6, -205, -114.2, -207.8, -122.5, -205.5, -122.5, -201.6, -138.5, -200.1, -138.5, -194, -148.1, -195.8, -153.5, -192.8, -153.5, -191, -155.3, -191, -156, -193.2, -160.5, -190.1, -160.5, -184.1, -169.5, -181.5, -169.5, -181, -169.7, -181, -171.7, -179.6, -177.5, -176, -177.5, -176, -178.7, -177.4, -180, -176.3, -182.5, -174.3, -182.5, -170, -183.9, -170, -187.3, -166.8, -190.5, -164, -190.5, -164, -195.3, -160.8, -198.5, -158.8, -198.5, -156.6, -197.9, -145.5, -203.5, -143.8, -203.5, -141.4, -202.9, -138.8, -205.5, -136.5, -205.5, -134, -204.3, -131.8, -206.5, -129.3, -206.5, -125.8, -203.9, -124.1, -206.5, -96, -206.5, -96, -205.2, -87.7, -203.8, -72.5, -211.5, -65.1, -211.5, -51, -215, -51, -216.5, -22, -216.5, -22, -214.6, 15, -216.6 )
uv = PoolVector2Array( 371, 46.6, 395.4, 56, 409.6, 50, 412.5, 50, 415, 51.2, 417.2, 49, 460, 49, 460, 50.2, 475, 52.2, 475, 53.8, 501, 65.7, 501, 67.6, 501.7, 71, 503.9, 71, 518.9, 88.9, 524, 87.2, 524, 90.5, 526.1, 94, 531, 94, 531, 96.7, 532.4, 101, 536.4, 101, 538.4, 107, 542.4, 107, 544.4, 113, 551, 116.9, 551, 120.5, 570, 152.5, 570, 155.6, 576, 171.6, 576, 174.3, 574.5, 179.6, 577.3, 183.9, 576.2, 186, 575.3, 186, 574.7, 187.1, 578.2, 194, 574.8, 194, 573, 195.8, 573, 196.5, 575.2, 201, 571.8, 201, 569.2, 203.6, 571.3, 206.9, 570.2, 209, 568.9, 209, 561, 217.7, 561, 219.2, 562.4, 220.5, 561.3, 223, 559.5, 223, 556, 225.1, 556, 227.2, 557.4, 228.5, 556.3, 231, 554.5, 231, 550, 233.3, 550, 236.8, 546.8, 240, 543.7, 240, 539, 243.1, 539, 245, 570.8, 245, 629, 303.2, 629, 442, 627, 442, 620, 451, 609.2, 451, 600, 441.8, 600, 312.8, 562.2, 274, 522.7, 274, 519, 272.8, 519, 276.4, 513, 278.4, 513, 282.4, 507, 284.4, 507, 287.8, 503.8, 291, 500, 291, 500, 291.7, 496, 297, 492.1, 297, 489.1, 302, 485.8, 302, 482, 307, 478.2, 307, 475.9, 304.7, 474.2, 308, 454, 308, 454, 306.1, 446, 309, 446, 467.7, 439, 477, 436, 477, 381, 478, 381, 476, 374, 471, 374, 468, 373, 305, 355, 305, 355, 302.7, 353.9, 301, 347, 304.2, 347, 301.4, 332.6, 296, 331, 296, 302, 296.9, 302, 447.3, 300.4, 452, 298.8, 452, 289.8, 461, 258, 461, 258, 458.9, 250, 451.9, 250, 288.8, 243.2, 282, 240.8, 282, 239.5, 283.4, 237, 282.3, 237, 280.5, 234.9, 277, 233.8, 277, 232.5, 278.4, 230, 277.3, 230, 275.5, 227.7, 271, 224.2, 271, 221, 267.8, 221, 265, 216.6, 265, 214.6, 259, 211.2, 259, 208, 255.8, 208, 251, 206.8, 251, 199.8, 258, 173.8, 258, 102, 328.8, 102, 427.8, 92.9, 438, 82.3, 438, 74, 430.9, 74, 315, 76.2, 315, 160.2, 230, 164, 230, 187.3, 229.1, 186.7, 228, 185.4, 228, 173, 220.1, 173, 215.4, 167, 213.4, 167, 210, 163.2, 210, 160, 206.8, 160, 203.8, 155, 200, 155, 196.7, 155.2, 196, 150, 192, 150, 189.5, 151, 187.5, 151, 180.8, 148, 177.8, 148, 174.2, 150.5, 171.7, 148, 170.1, 148, 157, 150.2, 157, 150.7, 156.5, 148, 153.8, 148, 150.9, 151, 148.9, 151, 147.3, 148.2, 139, 150.5, 139, 154.4, 123, 155.9, 123, 162, 113.4, 160.2, 108, 163.2, 108, 165, 106.2, 165, 105.5, 162.8, 101, 165.9, 101, 171.9, 92, 174.5, 92, 175, 91.8, 175, 89.8, 176.4, 84, 180, 84, 180, 82.8, 178.6, 81.5, 179.7, 79, 181.7, 79, 186, 77.6, 186, 74.2, 189.2, 71, 192, 71, 192, 66.2, 195.2, 63, 197.2, 63, 199.4, 63.6, 210.5, 58, 212.2, 58, 214.6, 58.6, 217.2, 56, 219.5, 56, 222, 57.2, 224.2, 55, 226.7, 55, 230.2, 57.6, 231.9, 55, 260, 55, 260, 56.3, 268.3, 57.7, 283.5, 50, 290.9, 50, 305, 46.5, 305, 45, 334, 45, 334, 46.9, 371, 44.9 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223 ) ]
__meta__ = {
"_edit_bone_": true
}

[node name="Glasses" type="Sprite" parent="Sprite"]
position = Vector2( 6.0293, -78.658 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 0.163843, 0.163843 )
polygon = PoolVector2Array( 15, -214.9, 39.4, -205.5, 53.6, -211.5, 56.5, -211.5, 59, -210.3, 61.2, -212.5, 104, -212.5, 104, -211.3, 119, -209.3, 119, -207.7, 145, -195.8, 145, -193.9, 145.7, -190.5, 147.9, -190.5, 162.9, -172.6, 168, -174.3, 168, -171, 170.1, -167.5, 175, -167.5, 175, -164.8, 176.4, -160.5, 180.4, -160.5, 182.4, -154.5, 186.4, -154.5, 188.4, -148.5, 195, -144.6, 195, -141, 214, -109, 214, -105.9, 220, -89.9, 220, -87.2, 218.5, -81.9, 221.3, -77.6, 220.2, -75.5, 219.3, -75.5, 218.7, -74.4, 222.2, -67.5, 218.8, -67.5, 217, -65.7, 217, -65, 219.2, -60.5, 215.8, -60.5, 213.2, -57.9, 215.3, -54.6, 214.2, -52.5, 212.9, -52.5, 205, -43.8, 205, -42.3, 206.4, -41, 205.3, -38.5, 203.5, -38.5, 200, -36.4, 200, -34.3, 201.4, -33, 200.3, -30.5, 198.5, -30.5, 194, -28.2, 194, -24.7, 190.8, -21.5, 187.7, -21.5, 183, -18.4, 183, -16.5, 214.8, -16.5, 273, 41.7, 273, 180.5, 271, 180.5, 264, 189.5, 253.2, 189.5, 244, 180.3, 244, 51.3, 206.2, 12.5, 166.7, 12.5, 163, 11.3, 163, 14.9, 157, 16.9, 157, 20.9, 151, 22.9, 151, 26.3, 147.8, 29.5, 144, 29.5, 144, 30.2, 140, 35.5, 136.1, 35.5, 133.1, 40.5, 129.8, 40.5, 126, 45.5, 122.2, 45.5, 119.9, 43.2, 118.2, 46.5, 98, 46.5, 98, 44.6, 90, 47.5, 90, 206.2, 83, 215.5, 80, 215.5, 25, 216.5, 25, 214.5, 18, 209.5, 18, 206.5, 17, 43.5, -1, 43.5, -1, 41.2, -2.10001, 39.5, -9, 42.7, -9, 39.9, -23.4, 34.5, -25, 34.5, -54, 35.4, -54, 185.8, -55.6, 190.5, -57.2, 190.5, -66.2, 199.5, -98, 199.5, -98, 197.4, -106, 190.4, -106, 27.3, -112.8, 20.5, -115.2, 20.5, -116.5, 21.9, -119, 20.8, -119, 19, -121.1, 15.5, -122.2, 15.5, -123.5, 16.9, -126, 15.8, -126, 14, -128.3, 9.5, -131.8, 9.5, -135, 6.29999, -135, 3.5, -139.4, 3.5, -141.4, -2.5, -144.8, -2.5, -148, -5.7, -148, -10.5, -149.2, -10.5, -156.2, -3.5, -182.2, -3.5, -254, 67.3, -254, 166.3, -263.1, 176.5, -273.7, 176.5, -282, 169.4, -282, 53.5, -279.8, 53.5, -195.8, -31.5, -192, -31.5, -168.7, -32.4, -169.3, -33.5, -170.6, -33.5, -183, -41.4, -183, -46.1, -189, -48.1, -189, -51.5, -192.8, -51.5, -196, -54.7, -196, -57.7, -201, -61.5, -201, -64.8, -200.8, -65.5, -206, -69.5, -206, -72, -205, -74, -205, -80.7, -208, -83.7, -208, -87.3, -205.5, -89.8, -208, -91.4, -208, -104.5, -205.8, -104.5, -205.3, -105, -208, -107.7, -208, -110.6, -205, -112.6, -205, -114.2, -207.8, -122.5, -205.5, -122.5, -201.6, -138.5, -200.1, -138.5, -194, -148.1, -195.8, -153.5, -192.8, -153.5, -191, -155.3, -191, -156, -193.2, -160.5, -190.1, -160.5, -184.1, -169.5, -181.5, -169.5, -181, -169.7, -181, -171.7, -179.6, -177.5, -176, -177.5, -176, -178.7, -177.4, -180, -176.3, -182.5, -174.3, -182.5, -170, -183.9, -170, -187.3, -166.8, -190.5, -164, -190.5, -164, -195.3, -160.8, -198.5, -158.8, -198.5, -156.6, -197.9, -145.5, -203.5, -143.8, -203.5, -141.4, -202.9, -138.8, -205.5, -136.5, -205.5, -134, -204.3, -131.8, -206.5, -129.3, -206.5, -125.8, -203.9, -124.1, -206.5, -96, -206.5, -96, -205.2, -87.7, -203.8, -72.5, -211.5, -65.1, -211.5, -51, -215, -51, -216.5, -22, -216.5, -22, -214.6, 15, -216.6 )

[node name="Dialogue" type="Node" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
DialogueResource = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="Choice_Next" from="Dialogue" to="." method="_on_Dialogue_Choice_Next"]
[connection signal="Conditonal_Data_Needed" from="Dialogue" to="." method="_on_Dialogue_Conditonal_Data_Needed"]
[connection signal="Dialogue_Ended" from="Dialogue" to="." method="_on_Dialogue_Ended"]
[connection signal="Dialogue_Next" from="Dialogue" to="." method="_on_Dialogue_Next"]
[connection signal="Dialogue_Started" from="Dialogue" to="." method="_on_Dialogue_Started"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
